--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
 </head>
 <body>
     <img src="lam.jpg" alt="Save the Date">
+    <audio autoplay loop>
+        <source src="nhac.mp3" type="audio/mpeg">
+        Trình duyệt của bạn không hỗ trợ phát nhạc.
+    </audio>    
 </body>
 </html>
